# friday

./: .env.example  .gitignore  README.md  USER_MANUAL.md  pyproject.toml  requirements.txt
friday/: main.py
friday/config/: settings.yaml
friday/core/: __init__.py  agent.py  memory.py  scheduler.py  skill_manager.py
friday/gateways/: __init__.py  base.py  discord_bot.py  slack_bot.py  telegram_bot.py
friday/interface/: __init__.py  cli.py  tui.py
friday/providers/: __init__.py  base.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
friday/skills/: __init__.py
src/friday/: __main__.py  cli.py
src/friday.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/friday/agents/: adaptive_rag.py  autogen_team.py  base.py  code_assistant.py  human_proxy.py  md_validator.py  meeting_prep.py  morning_digest.py  research.py  router.py  sandbox_executor.py  system_command_agent.py  system_commands.py  tools.py
src/friday/core/: agent_runner.py  config.py  exceptions.py  hardware.py  mcp.py  plugin.py  registry.py
src/friday/llm/: api.py  engine.py  local.py
src/friday/memory/: consolidator.py  conversation.py  document_indexer.py  vector_store.py
src/friday_model_scout/: __init__.py  cli.py  compatibility_engine.py  hardware_scanner.py  model_database.py  tui.py
tests/: conftest.py  test_agents.py  test_cli.py  test_gemini_payload.py  test_llm_api.py  test_mcp_security.py  test_memory_tiering.py  test_security.py  test_stt.py  test_system_command_agent.py  test_tts.py  test_web_search_skill.py
(+27 files in other folders)
