[project]
name = "friday"
version = "0.1.0"
description = "A local-first, privacy-centric personal AI assistant framework."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Raj", email = "raj@example.com"}
]
dependencies = [
    "typer[all]>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.1.0",
    "chromadb>=0.4.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "ollama>=0.1.0",
    "pydub>=0.25.1",
    "piper-tts>=1.0.0",
    "schedule>=1.2.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "GPUtil>=1.4.0",
    "platformdirs>=4.0.0",
    "pyaudio>=0.2.14",
    "vosk>=0.3.45",
    "docker>=7.0.0",
    "textual>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML",
]

[project.scripts]
friday = "friday.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["friday*"]

[tool.ruff]
select = ["E", "F", "B", "I", "UP"]
ignore = ["E501"]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
